@@ -1,3 +1,8 @@
+2002-02-25  Johan Dahlin  <jdahlin@telia.com>
+
+	* bonobo/bonobo-ui-engine.h (BONOBO_IS_UI_ENGINE): Make macros and
+	bonobo_ui_engine_get_type public
+
 2002-02-25  Hasbullah Bin Pit <sebol@ikhlas.com>
 
 	* configure.in: REALLY Added Malay (ms)to ALL_LINGUAS.
